# Cassava-AgroBot

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
scripts/: setup.sh
src/cassava_yield_icp_backend/: Cargo.toml  cassava_yield_icp_backend.did
src/cassava_yield_icp_backend/src/: lib.rs
src/cassava_yield_icp_frontend/: index.html  package.json
src/cassava_yield_icp_frontend/src/: App.jsx
src/cassava_yield_icp_frontend/src/components/: CassavaPrediction.jsx  Sidebar.jsx  chatbot.jsx
src/cassava_yield_icp_frontend/src/ic/: canisters.js
