[package]
name = "cassava_yield_icp_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-stable-structures = "0.6.0"
candid = "0.10"
ic-cdk = "0.17.0"  # Replace this with a stable version, rather than alpha
ic-llm = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
